# seedance-polza-mcp-server

./: .gitignore  CLAUDE.md  README.md  fastmcp.json  pyproject.toml  server.json
seedance_polza_mcp_server/: __init__.py  config.py  polza_client.py  server.py
tests/: test_seedance_server.py
